--- a/To-Do/src/app/components/shared/navbar/navbar.component.html
+++ b/To-Do/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navegacion">
     <div>
         <a href="#" routerLink="home">Inicio</a>
         <a href="#" routerLink="/login">Login</a>
