funcion mostrar tasks segun usuario logeado

--- a/To-Do/src/app/components/shared/logged-navbar/logged-navbar.component.html
+++ b/To-Do/src/app/components/shared/logged-navbar/logged-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navegacion">
     <div>
-        <a href="#" routerLink="userHome">To Do</a>
+        <a href="#" routerLink="/userHome">To Do</a>
         <a href="#" routerLink="">Agenda</a>
         <a (click)="onLogOut()">Salir</a>
     </div>
