--- a/To-Do/src/app/components/toDo/list-todo/list-todo.component.html
+++ b/To-Do/src/app/components/toDo/list-todo/list-todo.component.html
@@ -1,6 +1,7 @@
 <section>
+    <h2>TO DO 'S</h2>
     <div>
-        <h2>TO DO 'S</h2>
+        
         <table>
             <thead>
                 <tr>
@@ -15,7 +16,7 @@
                     <td>{{item.task}} </td>
                     <td>{{item.details}} </td>
                     <td><a class="btnDelete" (click)="deleteTask(item.id)" *ngIf="item.id">Eliminar</a></td>     <!-- *ngIf por si no existe id -->
-                    <td><a class="btnEdit" [routerLink]="['/taskEdit', item.id]">Editar</a></td>
+                    <td><a class="btnEdit" [routerLink]="['/editTask', item.id]">Editar</a></td>
                 </tr>
             </tbody>
         </table>
