--- a/To-Do/src/app/components/shared/logged-navbar/logged-navbar.component.html
+++ b/To-Do/src/app/components/shared/logged-navbar/logged-navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <div>
-        <a href="#" routerLink="userHome">To Do</a>
-        <a href="#" routerLink="">Agenda</a>
+        <a href="#" routerLink="/userHome">To Do</a>
+        <a href="#" routerLink="/currency">Tipo De Cambio</a>
         <a (click)="onLogOut()">Salir</a>
     </div>
 </nav>
