--- a/To-Do/src/app/components/shared/navbar/navbar.component.html
+++ b/To-Do/src/app/components/shared/navbar/navbar.component.html
@@ -3,5 +3,6 @@
         <a href="#" routerLink="home">Inicio</a>
         <a href="#" routerLink="/login">Login</a>
         <a href="#" routerLink="/newUser">Nuevo Usuario</a>
+        <a href="#" routerLink="/currency">Tipo De Cambio</a>
     </div>
 </nav>
