href en el click de delete

--- a/To-Do/src/app/components/toDo/list-todo/list-todo.component.html
+++ b/To-Do/src/app/components/toDo/list-todo/list-todo.component.html
@@ -15,7 +15,7 @@
                     <td>{{item.priority}} </td>
                     <td>{{item.task}} </td>
                     <td>{{item.details}} </td>
-                    <td><a class="btnDelete" (click)="deleteTask(item.id)" >Eliminar</a></td>     <!--*ngIf="item.id" *ngIf por si no existe id -->
+                    <td><a class="btnDelete" href="/userHome" (click)="deleteTask(item.id)" >Eliminar</a></td>     <!--*ngIf="item.id" *ngIf por si no existe id -->
                     <td><a class="btnEdit" [routerLink]="['/editTask', item.id]">Editar</a></td>
                 </tr>
             </tbody>
