interfaz todo con fecha, calendario funciona pero necesita un reload para mostrar los eventos

--- a/src/app/components/toDo/edit-todo/edit-todo.component.html
+++ b/src/app/components/toDo/edit-todo/edit-todo.component.html
@@ -16,6 +16,10 @@
                     <textarea id="mensaje" name="mensaje" rows="4" cols="50" formControlName="info"></textarea>
                 </div>
                 <div class="campo">
+                    <label for="fecha">Fecha:</label>
+                    <input type="date" id="fecha" formControlName="date">
+                </div>
+                <div class="campo">
                     <input type="hidden" id="id" name="id">
                 </div>
                 <div class="campo">
