--- a/src/app/components/toDo/list-todo/list-todo.component.html
+++ b/src/app/components/toDo/list-todo/list-todo.component.html
@@ -8,6 +8,7 @@
                     <th>Prioridad</th>
                     <th>Tarea</th>
                     <th>Detalles</th>
+                    <th>Fecha</th>
                 </tr>
             </thead>
             <tbody>
@@ -15,6 +16,7 @@
                     <td>{{item.priority}} </td>
                     <td>{{item.task}} </td>
                     <td>{{item.details}} </td>
+                    <td>{{item.date}} </td>
                     <td><a class="btnDelete" href="/userHome" (click)="deleteTask(item.id)" >Eliminar</a></td>     <!--*ngIf="item.id" *ngIf por si no existe id -->
                     <td><a class="btnEdit" [routerLink]="['/editTask', item.id]">Editar</a></td>
                 </tr>
