--- a/src/app/components/shared/logged-navbar/logged-navbar.component.html
+++ b/src/app/components/shared/logged-navbar/logged-navbar.component.html
@@ -2,6 +2,7 @@
     <div>
         <a href="#" routerLink="/userHome">To Do</a>
         <a href="#" routerLink="/newTask">Nueva Actividad</a>
+        <a href="#" routerLink="/calendar">Agenda</a>
         <a href="#" routerLink="/currency">Tipo De Cambio</a>
         <a (click)="onLogOut()">Salir</a>
     </div>
