--- a/src/app/components/hero/hero.component.css
+++ b/src/app/components/hero/hero.component.css
@@ -4,5 +4,5 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 3rem;
+    margin: 3rem;
 }
