--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,8 +1,12 @@
-<hr>
 <footer>
-    <div>
-        <h3>LISTADOS</h3>
-        <h3>NUEVOS</h3>
+    <div class="footContainer">
+        <h3>Tus Redes</h3>
+        <div class="redes">
+            <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank" ><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/?lang=es" target="_blank" ><i class="fa fa-twitter"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" ><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://ar.linkedin.com/" target="_blank" ><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        </div>
     </div>    
     <p>Todos los derechos Reservados.  <span> TO DO</span> </p>
 </footer>
