--- a/src/app/components/shared/logged-navbar/logged-navbar.component.html
+++ b/src/app/components/shared/logged-navbar/logged-navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navegacion">
+<nav>
     <div>
         <a href="#" routerLink="/userHome">To Do</a>
         <a href="#" routerLink="/newTask">Nueva Actividad</a>
