--- a/src/app/pages/currency-page/currency-page.component.html
+++ b/src/app/pages/currency-page/currency-page.component.html
@@ -1,3 +1,6 @@
-<app-logged-navbar></app-logged-navbar>
-<app-dolar></app-dolar>
-<app-currency></app-currency>
+<app-header></app-header>
+<div class="back">
+    <app-logged-navbar></app-logged-navbar>
+    <app-dolar></app-dolar>
+    <app-currency></app-currency>
+</div>
