--- a/src/app/pages/edit-task-page/edit-task-page.component.html
+++ b/src/app/pages/edit-task-page/edit-task-page.component.html
@@ -1,2 +1,5 @@
+<app-header></app-header>
 <app-logged-navbar></app-logged-navbar>
-<app-edit-todo></app-edit-todo>
+<div class="back">
+    <app-edit-todo></app-edit-todo>
+</div>
