--- a/src/app/pages/new-task-page/new-task-page.component.html
+++ b/src/app/pages/new-task-page/new-task-page.component.html
@@ -1,2 +1,5 @@
+<app-header></app-header>
 <app-logged-navbar></app-logged-navbar>
-<app-new-todo></app-new-todo>
+<div class="back">    
+    <app-new-todo></app-new-todo>
+</div>
