--- a/src/app/pages/new-user-page/new-user-page.component.html
+++ b/src/app/pages/new-user-page/new-user-page.component.html
@@ -1,2 +1,5 @@
+<app-header></app-header>
 <app-navbar></app-navbar>
-<app-new-user></app-new-user>
+<div class="back">
+    <app-new-user></app-new-user>
+</div>
