--- a/src/app/pages/user-home-page/user-home-page.component.html
+++ b/src/app/pages/user-home-page/user-home-page.component.html
@@ -1,2 +1,5 @@
+<app-header></app-header>
 <app-logged-navbar></app-logged-navbar>
-<app-list-todo></app-list-todo>
+<div class="back">
+    <app-list-todo></app-list-todo>
+</div>
