--- a/src/app/components/exchange/dolar/dolar.component.html
+++ b/src/app/components/exchange/dolar/dolar.component.html
@@ -1,10 +1,7 @@
 <h2>Valores de Mercado</h2>
 <div id="dolarsGraph">
-    <canvasjs-chart [options]="chartOptions" 
-                    [styles]="{width: '100%', height:'500px'}">
-    </canvasjs-chart>   
+    <canvasjs-chart [options]="chartOptions"></canvasjs-chart>   
 </div>
-<hr>
 <div id="dolarTable">
     <table>
         <thead>
@@ -12,15 +9,15 @@
                 <th>DOLAR</th>
                 <th>COMPRA</th>
                 <th>VENTA</th>
-                <th>Actualizado</th>
+                <th>ACTUALIZADO</th>
             </tr>
         </thead>
         <tbody id="clientes">
             <tr *ngFor="let item of dolarList">
                 <td>{{item.nombre}}</td>
-                <td>{{item.compra}}</td>
-                <td>{{item.venta}}</td>
-                <td>{{item.fechaActualizacion}}</td>
+                <td>${{item.compra}}</td>
+                <td>${{item.venta}}</td>
+                <td class="dateHour">{{formatDateHour(item.fechaActualizacion)}}</td>
             </tr>
         </tbody>
     </table>
