--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navegacion">
+<nav>
     <div>
         <a href="#" routerLink="home">Inicio</a>
         <a href="#" routerLink="/login">Login</a>
