--- a/src/app/components/toDo/list-todo/list-todo.component.css
+++ b/src/app/components/toDo/list-todo/list-todo.component.css
@@ -1,50 +1,44 @@
-div {
-    margin: 0 auto;
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-position: center;
-}
-
-
 h2{
+    padding-top: 2rem;
+    font-size: 4rem;
     text-align: center;
+    color: var(--c-dBlue);
+    text-decoration: underline;
+    font-weight: bolder;
 }
-
+div {
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 4rem;
+}
 table {
-    width: 100%;
+    width: 80%;
+    font-size: 2rem;
+    align-self: center;
+    text-align: center;
     border-collapse: collapse;
-    margin-bottom: 2rem;
 }
-
-thead th{
-    background-color: #363636;
-    font-size: 1.5rem;
-    color: white;
-    text-align: left;
-    padding: 1rem;
-    border-style: solid;
-    border-width: 0.1rem;
+th, td{
+    background-color: var(--c-dBlue);
+    border: 3px solid var(--c-lBlue);
+    padding: 1rem 5rem;
 }
-
-tbody td{
-    background-color: #363636;
-    font-size: larger;
-    color: lightskyblue;
-    text-align: left;
-    padding: 1rem;
-    border-color: white;
-    border-style: solid;
-    border-width: 0.1rem;
+th{
+    background-color: var(--c-lBlue);
+    color: var(--c-dBlue);
 }
-
 .btnDelete{
-    color: red;
+    color: var(--c-lRed);
+    text-decoration: none;
     cursor: pointer;
 }
-
 .btnEdit{
-    color: white;
+    color: var(--c-lGreen);
+    text-decoration: none;
     cursor: pointer;
+}
+.btnDelete:hover, .btnEdit:hover{
+    color: var(--c-white);
 }
