--- a/src/app/components/toDo/edit-todo/edit-todo.component.html
+++ b/src/app/components/toDo/edit-todo/edit-todo.component.html
@@ -33,6 +33,10 @@
                     </span>
                 </div>
                 <div class="campo">
+                    <label for="fecha">Fecha:</label>
+                    <input type="date" id="fecha" formControlName="date">
+                </div>
+                <div class="campo">
                     <input type="hidden" id="id" name="id">
                 </div>
                 <div class="btn">
