--- a/src/app/components/toDo/new-todo/new-todo.component.html
+++ b/src/app/components/toDo/new-todo/new-todo.component.html
@@ -31,6 +31,15 @@
                     </span>
                 </div>
                 <div class="campo">
+                    <label for="fecha">Fecha:</label>
+                    <input type="date" id="fecha" formControlName="date">
+                </div>
+                <div class="error">
+                    <span  *ngIf="formulario.controls['info'].getError('required') && formulario.touched">
+                        Campo Requerido
+                    </span>
+                </div>
+                <div class="campo">
                     <input type="hidden" id="id" name="id">
                 </div>
                 <div class="btn">
