--- a/src/app/components/toDo/edit-todo/edit-todo.component.html
+++ b/src/app/components/toDo/edit-todo/edit-todo.component.html
@@ -10,7 +10,7 @@
                     <input type="number" id="prioridad" min="1" max="10" formControlName="priority">
                 </div>
                 <div class="error">
-                    <span  *ngIf="formulario.controls['priority'].getError('required') && formulario.touched">
+                    <span  *ngIf="formulario.controls['priority'].getError('required') && formulario.get('priority')?.touched">
                         Campo Requerido
                     </span>
                 </div>
@@ -19,7 +19,7 @@
                     <input type="text" id="actividad" formControlName="activity">
                 </div>
                 <div class="error">
-                    <span  *ngIf="formulario.controls['activity'].getError('required') && formulario.touched">
+                    <span  *ngIf="formulario.controls['activity'].getError('required') && formulario.get('activity')?.touched">
                         Campo Requerido
                     </span>
                 </div>
@@ -28,13 +28,18 @@
                     <textarea id="mensaje" name="mensaje" rows="3" cols="31" formControlName="info"></textarea>
                 </div>
                 <div class="error">
-                    <span  *ngIf="formulario.controls['info'].getError('required') && formulario.touched">
+                    <span  *ngIf="formulario.controls['info'].getError('required') && formulario.get('info')?.touched">
                         Campo Requerido
                     </span>
                 </div>
                 <div class="campo">
                     <label for="fecha">Fecha:</label>
                     <input type="date" id="fecha" formControlName="date">
+                </div>
+                <div class="error">
+                    <span  *ngIf="formulario.controls['date'].getError('required') && formulario.get('date')?.touched">
+                        Campo Requerido
+                    </span>
                 </div>
                 <div class="campo">
                     <input type="hidden" id="id" name="id">
