--- a/src/app/components/user/new-user/new-user.component.html
+++ b/src/app/components/user/new-user/new-user.component.html
@@ -11,10 +11,10 @@
                         >
             </div>
             <div class="error">
-                <span  *ngIf="userForm.controls['user'].getError('required') && userForm.touched">
+                <span  *ngIf="userForm.controls['user'].getError('required') && userForm.get('user')?.touched">
                     Campo Requerido
                 </span>
-                <span  *ngIf="userForm.controls['user'].getError('minlength') && userForm.touched">
+                <span  *ngIf="userForm.controls['user'].getError('minlength') && userForm.get('user')?.touched">
                     Minimo 5 Caracteres
                 </span>
             </div>
@@ -27,10 +27,10 @@
                         >
             </div>
             <div class="error">
-                <span  *ngIf="userForm.controls['pass'].getError('required') && userForm.touched">
+                <span  *ngIf="userForm.controls['pass'].getError('required') && userForm.get('pass')?.touched">
                     Campo Requerido
                 </span>
-                <span  *ngIf="userForm.controls['pass'].getError('minlength') && userForm.touched">
+                <span  *ngIf="userForm.controls['pass'].getError('minlength') && userForm.get('pass')?.touched">
                     Minimo 5 Caracteres
                 </span>
             </div>
