--- a/src/app/components/exchange/dolar/dolar.component.css
+++ b/src/app/components/exchange/dolar/dolar.component.css
@@ -3,7 +3,11 @@ h2{
     text-align: center;
     color: var(--c-white);
 }
-
+@media(max-width: 1000px){
+    h2{
+        font-size: 3rem;
+    }
+}
 #dolarsGraph{
     display: flex;
     flex-direction: column;
@@ -23,9 +27,20 @@ canvasjs-chart{
     margin: 2rem;
     padding: 0 2rem;
 }
+@media(max-width: 1000px){
+    #dolarTable{
+        margin: 0;
+        padding: .2rem;
+    }
+}
 table{
     opacity: 0.8;
     margin-bottom: 4rem;
+}
+@media(max-width: 760px){
+    table{
+        opacity: 1;
+    }
 }
 table:hover{
     opacity: 1;
@@ -40,10 +55,24 @@ table, th, td{
     padding: 1rem 5rem;
     text-align: center;
 }
+@media(max-width: 1000px){
+    table,th, td{
+        font-size: 2rem;
+        border: 2px solid var(--c-lBlue);
+        table-layout: fixed;
+        width: 98%;
+        padding: 0;
+    }
+}
 th{
     background-color: var(--c-lBlue);
     color: var(--c-dBlue);
 }
 .dateHour{
     font-size: 2rem;
+}
+@media(max-width: 1000px){
+    .dateHour{
+        font-size: 1.5rem;
+    }
 }
