--- a/src/app/components/shared/logged-navbar/logged-navbar.component.css
+++ b/src/app/components/shared/logged-navbar/logged-navbar.component.css
@@ -2,6 +2,23 @@ nav {
     background-color: var(--c-lBlue);
     overflow: hidden;
 }
+@media (max-width: 1000px){
+    nav{
+        display: flex;
+        justify-content: center;
+    }
+}
+@media (max-width: 760px){
+    div{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 1rem;
+    }
+    a:nth-child(5){
+        grid-column: 1/3;
+        justify-self: center;
+    }
+}
 a {
     text-decoration: none;
     display: inline-block;
@@ -9,6 +26,11 @@ a {
     text-align: center;
     padding: 2rem 3rem;
     font-size: 2rem;
+}
+@media (max-width: 760px){
+    a{
+        padding: 2rem 3rem;
+    }
 }
 a:hover {
     background-color: var(--c-dBlue);
