--- a/src/app/components/toDo/list-todo/list-todo.component.html
+++ b/src/app/components/toDo/list-todo/list-todo.component.html
@@ -7,6 +7,7 @@
                     <th>PRIORIDAD</th>
                     <th>TAREA</th>
                     <th>DETALLES</th>
+                    <th>FECHA</th>
                 </tr>
             </thead>
             <tbody>
