--- a/src/app/components/toDo/list-todo/list-todo.component.html
+++ b/src/app/components/toDo/list-todo/list-todo.component.html
@@ -4,10 +4,10 @@
         <table>
             <thead>
                 <tr>
-                    <th>PRIORIDAD</th>
-                    <th>TAREA</th>
-                    <th>DETALLES</th>
-                    <th>FECHA</th>
+                    <th (click)="sortTablePri()">PRIORIDAD</th>
+                    <th (click)="sortTableTask()">TAREA</th>
+                    <th (click)="sortTableTask()">DETALLES</th>
+                    <th (click)="sortTableDate()">FECHA</th>
                 </tr>
             </thead>
             <tbody>
